fix: Add `max-width` for preventing overflow

--- a/src/components/atoms/Slider/Slider.css
+++ b/src/components/atoms/Slider/Slider.css
@@ -64,6 +64,7 @@
   top: 11.5px;
   left: 4px;
   z-index: 2;
+  max-width: calc(100% - 28px);
   width: 0;
   height: 4px;
   background: #d7d7d7;
